--- a/Styles/media-queries.css
+++ b/Styles/media-queries.css
@@ -36,7 +36,19 @@
         overflow: hidden;
     }
     /* news page */
-
+    .archives__article {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        justify-content:flex-start;
+        padding: 0.25em 0.125em;
+    }
+    .archives__article > .stack h3, .archives__article > .stack p {
+        text-align: left;
+        margin: 0;
+    }
+    .archives__article > .cluster a {
+        margin: 0.25em 0 0;
+    }
     /* cars page */
 
     /* contact us page */
@@ -171,6 +183,9 @@
         grid-template-rows: auto;
         
     }
+    .contact-us h2 {
+        margin: 1em 1em 0.5em;
+    }
     .contact-us__website {
         grid-column: 1 / span 2;
         grid-row: 2;
@@ -224,7 +239,6 @@
         margin: 1em 0;
         max-width: 80vw;
         max-width: 300px;
-
     }
     .featured-articles__cards p, .featured-articles__cards h3 {
         padding: 1em;
@@ -233,16 +247,18 @@
         min-width: 100%;
     }
     .archives {
-        grid-template-columns: 100%;
-        grid-template-rows: auto;
+        display: inline;
         justify-items: center;
+        align-items: center;
     }
     .archives > .archives__filters {
         width: 70vw;
         grid-column: 1;
         grid-row: 1;
-        margin-bottom: 2em;
+        padding: 2em 1em;
+        margin: 0 auto 2em;
     }
+
     .archives > .archives__box {
         grid-column: 1;
         grid-row: 2;
@@ -324,23 +340,24 @@
 
 
 /* for a large desktop */
-@media (max-width: 991.98px) { 
+@media (min-width: 991.98px) { 
     /* header */
+    .accordion--active + .panel-1 {
+        display: grid;
+        grid-template-columns: 70% 30%;
+    }
     /* TOTALLY SWAP THE HEADER HERE TO THE DESKTOP VERSION */   
 
 }
 
 
 /* for a super wide screen */
-@media (max-width: 1199.98px) { 
+@media (min-width: 1199.98px) { 
     /* header */
     /* TOTALLY SWAP THE HEADER HERE TO THE DESKTOP VERSION */   
     
     /* contact us */
-    .accordion--active + .panel-1 {
-        display: grid;
-        grid-template-columns: 70% 30%;
-    }
+
 
 }
 
