--- a/Styles/typography.css
+++ b/Styles/typography.css
@@ -60,7 +60,7 @@ a:hover, li:hover {
 
 a:active {
     text-shadow: none;
-    color: var(--dark-blue);
+    color: var(--gold);
 }
 
 .text--xlge {
